--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
     "busboy-body-parser": "^0.3.2",
+    "cloudinary": "^1.21.0",
     "connect-busboy": "0.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
